2389	[bug]		Move the "working directory writable" check to after
			the ns_os_changeuser() call. [RT #18326]

	--- 9.4.3b2 released ---

2385.	[bug]		A condition variable in socket.c could leak in
			rare error handling [RT #17968].

2384.	[security]	Additional support for query port randomization (change
			#2375) including performance improvement and port range
			specification.  [RT #17949, #18098]

2383.	[bug]		named could double queries when they resulted in
			SERVFAIL due to overkilling EDNS0 failure detection.
			[RT #18182]

2382.	[doc]		Add descriptions of IPSECKEY, SPF and SSHFP to ARM.

2381.	[port]		dlz/mysql: support multiple install layouts for
			mysql.  <prefix>/include/{,mysql/}mysql.h and
			<prefix>/lib/{,mysql/}. [RT #18152]

2380.	[bug]		dns_view_find() was not returning NXDOMAIN/NXRRSET
			proofs which, in turn, caused validation failures
			for insecure zones immediately below a secure zone
			the server was authoritative for. [RT #18112] 

2379.	[contrib]	queryperf/gen-data-queryperf.py: removed redundant
			TLDs and supported RRs with TTLs [RT #17972]

2377.	[bug]		Address race condition in dnssec-signzone. [RT #18142]

2376.	[bug]		Change #2144 was not complete.

2375.	[security]	Fully randomize UDP query ports to improve
			forgery resilience. [RT #17949]

2372.	[bug]		fixed incorrect TAG_HMACSHA256_BITS value [RT #18047]

2369.	[bug]		libbind: Array bounds overrun on read in bitncmp().
			[RT #18054]

2364.	[bug]		named could trigger a assertion when serving a
			malformed signed zone. [RT #17828]

2363.	[port]		sunos: pre-set "lt_cv_sys_max_cmd_len=4096;".
			[RT #17513]

2361.	[bug]		"recursion" statistics counter could be counted
			multiple times for a single query.  [RT #17990]

	--- 9.4.3b1 released ---

2358.	[doc]		Update host's default query description. [RT #17934]

2356.	[bug]		Built in mutex profiler was not scalable enough.
			[RT #17436]

2353.	[func]		libbind: nsid support. [RT #17091]
